--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -5,6 +5,110 @@
     <title>InAds - Dashboard</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
+    <style>
+        @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500);
+
+        $dataNum:10;
+        $name:"Similar Keywords" "This Ad";
+        $data:50% {{average_cpm_of_keywords}} {{average_cpm}};
+
+        $width:400px;
+        $height:200px;
+        $color:#9baec8 #d9e1e8 #2b90d9 #8ec0e4 #cadbe9 #6aafe6 #d6ecfa #a5dff9 #dae9f4 #d3e0f7;
+
+        .igFrameBar{
+          width:$width;
+          height:$height;
+          position:relative;
+          background:#f2f2f2;
+          margin:15% auto 0px auto;
+          transform:translate(0,-50%);
+        }
+        .igFrameBar:before{
+          content:"";
+          width:100%;
+          height:1px;
+          background:#fff;
+          position:absolute;
+          top:50%;
+        }
+        .igFrameBar:after{
+          content:"";
+          width:100%;
+          height:50%;
+          background:transparent;
+          position:absolute;
+          top:25%;
+          border-top:1px solid #fff;
+          border-bottom:1px solid #fff;
+        }
+        .igData{
+          width:20px;
+          position:absolute;
+          bottom:1px;
+          margin:0px 0px 0px 0px;
+          z-index:99;
+          float:left;
+        }
+        @for $i from 1 through $dataNum {
+            .igData#{$i} {
+               background:nth($color,$i);
+               height:0px;
+               left:$width/($dataNum+1) * $i - 10;
+               -webkit-animation: showBar#{$i} 1.2s $i*.1s forwards;
+               -moz-animation: showBar#{$i} 1.2s $i*.1s forwards;
+               animation: showBar#{$i} 1.2s $i*.1s forwards;
+            }
+        }
+        .igData:before{
+          position:absolute;
+          top:-16px;
+          font-size:12px;
+          color:#333;
+          font-family:"roboto";
+          font-weight:300;
+        }
+        @for $i from 1 through $dataNum {
+            .igData#{$i}:before {
+                content:nth($data,$i)+"";
+            }
+        }
+        .igData:after{
+          position:absolute;
+          bottom:-55px;
+          transform:rotate(30deg);
+          color:#666;
+          font-size:14px;
+          text-align:left;
+          font-family:"roboto";
+          font-weight:300;
+          width:150px;
+        }
+        @for $i from 1 through $dataNum {
+            .igData#{$i}:after{
+                content:nth($name,$i)+"";
+            }
+        }
+
+        @for $i from 1 through $dataNum {
+              @-webkit-keyframes showBar#{$i} {
+            0%   {height: 0px;}
+            100%  {height: nth($data,$i);}
+          }
+        }
+        @for $i from 1 through $dataNum {
+              @-moz-keyframes showBar#{$i} {
+            0%   {height: 0px;}
+            100%  {height: nth($data,$i);}
+          }
+        }
+        @for $i from 1 through $dataNum {
+              @keyframes showBar#{$i} {
+            0%   {height: 0px;}
+            100%  {height: nth($data,$i);}
+          }
+        }
+    </style>
 </head>
 <body style="font-family: open sans; margin: 0;">
     <div style="min-height: 100vh; background-color: rgba(150, 238, 229, 0.05); width: 20%; border-right:1px solid rgba(150, 150, 150, .5); float: left; position: fixed">
@@ -39,8 +143,10 @@
     </div>
     <div style="float: left; width: 79%; margin-left: 20%">
         <h1 style="margin-left: 5%">Ad Information</h1>
-            <div id="chartContainer" style="height: 300px; width: 100%;"></div>
-            <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+            <div class="igFrameBar">
+                <div class="igData igData1"></div>
+                <div class="igData igData2"></div>
+            </div>
             <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
                 <div>
@@ -96,36 +202,6 @@
         <br>
     </div>
     <script>
-    window.onload = function () {
-
-    var chart = new CanvasJS.Chart("chartContainer", {
-        animationEnabled: true,
-
-        title:{
-            text:"Average CPM for similar keywords | This Campaign's CPM"
-        },
-        axisX:{
-            interval: 10
-        },
-        axisY2:{
-            interlacedColor: "rgba(1,77,101,.2)",
-            gridColor: "rgba(1,77,101,.1)",
-            title: "CPM in cents"
-        },
-        data: [{
-            type: "bar",
-            name: "cpm",
-            axisYType: "secondary",
-            color: "#014D65",
-            dataPoints: [
-                { y: {{ average_cpm_of_keywords }} * 100 , label: "Similar Keywords" },
-                { y: {{ average_cpm }} * 100, label: "This Ad" },
-            ]
-        }]
-    });
-    chart.render();
-
-    }
         var acc = document.getElementsByClassName("accordion");
         var i;
 
