--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -6,107 +6,83 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="/styles">
     <style>
-        @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,100,500);
-
-        $dataNum:10;
-        $name:"Similar Keywords" "This Ad";
-        $data:50% {{average_cpm_of_keywords}} {{average_cpm}};
-
-        $width:400px;
-        $height:200px;
-        $color:#9baec8 #d9e1e8 #2b90d9 #8ec0e4 #cadbe9 #6aafe6 #d6ecfa #a5dff9 #dae9f4 #d3e0f7;
-
-        .igFrameBar{
-          width:$width;
-          height:$height;
-          position:relative;
-          background:#f2f2f2;
-          margin:15% auto 0px auto;
-          transform:translate(0,-50%);
+        html,body{
+          font-family: 'Source Sans Pro', sans-serif;
+          margin: 0;
+          padding: 0;
         }
-        .igFrameBar:before{
-          content:"";
-          width:100%;
-          height:1px;
-          background:#fff;
-          position:absolute;
-          top:50%;
+        .graph-cont{
+          width: calc(100% - 40px);
+          width: 100%;
+          max-width: 800px;
+          margin: 0 auto;
         }
-        .igFrameBar:after{
-          content:"";
-          width:100%;
-          height:50%;
-          background:transparent;
-          position:absolute;
-          top:25%;
-          border-top:1px solid #fff;
-          border-bottom:1px solid #fff;
+        h1,h2,h3{
+          text-align: center;
+          color: #34495e;
         }
-        .igData{
-          width:20px;
-          position:absolute;
-          bottom:1px;
-          margin:0px 0px 0px 0px;
-          z-index:99;
-          float:left;
+        .bar{
+          height: 30px;
+          max-width: 800px;
+          margin: 0 auto 10px auto;
+          line-height: 30px;
+          font-size: 16px;
+          color: white;
+          padding: 0 0 0 10px;
+          position: relative;
         }
-        @for $i from 1 through $dataNum {
-            .igData#{$i} {
-               background:nth($color,$i);
-               height:0px;
-               left:$width/($dataNum+1) * $i - 10;
-               -webkit-animation: showBar#{$i} 1.2s $i*.1s forwards;
-               -moz-animation: showBar#{$i} 1.2s $i*.1s forwards;
-               animation: showBar#{$i} 1.2s $i*.1s forwards;
-            }
+        .bar::before{
+          content: '';
+          width: 100%;
+          position: absolute;
+          left: 0;
+          height: 30px;
+          top: 0;
+          z-index: -2;
+          background: #ecf0f1;
         }
-        .igData:before{
-          position:absolute;
-          top:-16px;
-          font-size:12px;
-          color:#333;
-          font-family:"roboto";
-          font-weight:300;
+        .bar::after{
+          content: '';
+          background: #2ecc71;
+          height: 30px;
+          transition: 0.7s;
+          display: block;
+          width: 100%;
+          -webkit-animation: bar-before 1 1.8s;
+          position: absolute;
+          top: 0;
+          left: 0;
+          z-index: -1;
         }
-        @for $i from 1 through $dataNum {
-            .igData#{$i}:before {
-                content:nth($data,$i)+"";
-            }
+        .bar1::after{
+          max-width: {{ average_cpm_of_keywords * 5000 }}%;
         }
-        .igData:after{
-          position:absolute;
-          bottom:-55px;
-          transform:rotate(30deg);
-          color:#666;
-          font-size:14px;
-          text-align:left;
-          font-family:"roboto";
-          font-weight:300;
-          width:150px;
+        .bar2::after{
+          max-width: {{ average_cpm * 5000}}%;
         }
-        @for $i from 1 through $dataNum {
-            .igData#{$i}:after{
-                content:nth($name,$i)+"";
-            }
-        }
-
-        @for $i from 1 through $dataNum {
-              @-webkit-keyframes showBar#{$i} {
-            0%   {height: 0px;}
-            100%  {height: nth($data,$i);}
+        @-webkit-keyframes bar-before{
+          0%{
+            width: 0px;
+          }
+          100%{
+            width: 100%;
           }
         }
-        @for $i from 1 through $dataNum {
-              @-moz-keyframes showBar#{$i} {
-            0%   {height: 0px;}
-            100%  {height: nth($data,$i);}
-          }
+
+        .how-cont{
+          width: calc(100% - 40px);
+          width: 100%;
+          max-width: 800px;
+          margin: 0 auto;
         }
-        @for $i from 1 through $dataNum {
-              @keyframes showBar#{$i} {
-            0%   {height: 0px;}
-            100%  {height: nth($data,$i);}
-          }
+        code {
+          padding: 5px;
+          background: #ecf0f1;
+          display: block;
+        }
+        pre{
+          padding: 0;
+          margin: 0;
         }
     </style>
 </head>
@@ -143,9 +119,10 @@
     </div>
     <div style="float: left; width: 79%; margin-left: 20%">
         <h1 style="margin-left: 5%">Ad Information</h1>
-            <div class="igFrameBar">
-                <div class="igData igData1"></div>
-                <div class="igData igData2"></div>
+            <div class="graph-cont">
+              <h1>Responsive CSS Only Animated Bar Graph</h1>
+              <div class="bar bar1">{{ average_cpm_of_keywords }}</div>
+              <div class="bar bar2">{{ average_cpm }}</div>
             </div>
             <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
