--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -27,7 +27,7 @@
           margin: 0 auto 10px auto;
           line-height: 30px;
           font-size: 16px;
-          color: white;
+          color: light-blue;
           padding: 0 0 0 10px;
           position: relative;
         }
