--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -121,8 +121,8 @@
         <h1 style="margin-left: 5%">Ad Information</h1>
         <div class="graph-cont">
             <h1>Average CPM for Similar Keywords | Average CPM</h1>
-            <div class="bar bar1">{{ average_cpm_of_keywords }}</div>
-            <div class="bar bar2">{{ average_cpm }}</div>
+            <div class="bar bar1">{{ average_cpm_of_keywords }} $</div>
+            <div class="bar bar2">{{ average_cpm }} $</div>
         </div>
             <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
             <div style="margin-left: 10%" class="panel">
