--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -124,8 +124,7 @@
             <div class="bar bar1">{{ average_cpm_of_keywords }} $</div>
             <div class="bar bar2">{{ average_cpm }} $</div>
         </div>
-            <button style="margin-left: 10%; width: 80%" class="accordion">{{ ads.advertiserwebsite }}</button>
-            <div style="margin-left: 10%" class="panel">
+            <div style="margin-left: 10%">
                 <div>
                     <h3>{{ ads.advertiserwebsite }}</h3>
                     <iframe src="{{ ads.advertiserwebsite }}" style="width: 100%; height: 15%" frameborder="0"></iframe>
