--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -173,7 +173,7 @@
                     {% endif %}
                     <div class="graph-cont">
                         <h1>Average CPC</h1>
-                        <div class="bar bar3">{{ average_cpm }} $</div>
+                        <div class="bar bar3">{{ average_cpc }} $</div>
                     </div>
                     <h3>Total Spending: {{ total_spending }}</h3>
                     <h3>Ad Click Rate: 1 / {{ click_rate }}</h3>
