--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -178,9 +178,9 @@
                     <h3>Total Spending: {{ total_spending }}</h3>
                     <h3>Ad Click Rate: 1 / {{ click_rate }}</h3>
                     {% if paused %}
-                        <a href="/unpause/{{ ads.id }}" style="text-decoration=none; color: gray"><button class="buttonGray">Unpause ad</button></a>
+                        <a href="/unpause/{{ ads.id }}" style="text-decoration=none; color: gray"><button class="buttonGray">Unpause</button></a>
                     {% elif not paused %}
-                        <a href="/pause/{{ ads.id }}" style="text-decoration=none; color: gray"><button class="buttonGray">Pause ad</button></a>
+                        <a href="/pause/{{ ads.id }}" style="text-decoration=none; color: gray"><button class="buttonGray">Pause</button></a>
                     {% endif %}
                 </div>
             </div>
