--- a/templates/partners.html
+++ b/templates/partners.html
@@ -19,7 +19,7 @@
     <h3 style="margin-left: 5%">Our Ad Partners</h3>
     <h4 style="margin-left: 5%">Advertising partners are corporate advertisers registered to the InAds Global Display Network</h4>
     <br>
-    <div style="margin-left: 5%">
+    <div style="margin-left: 5%; margin-right: 5%">
         <div style="float: left; width: 15%">
             <img src="/logos/vayes.jpg" style="width: 100%" alt="">
             <br>
@@ -36,9 +36,19 @@
             <center><a style="color: black; text-decoration: none" href="https://www.doktus.net">Doktus</a></center>
         </div>
         <div style="float: left; width: 15%; margin-left: 2%">
-            <img src="/logos/egbilisim.png" style="width: 100%" alt="">
+            <img src="/logos/pupahouse.jpeg" style="width: 100%" alt="">
             <br>
-            <center><a style="color: black; text-decoration: none" href="https://www.egbilisim.com.tr">EG Bilişim</a></center>
+            <center><a style="color: black; text-decoration: none" href="http://pupahouse.com">PupaHouse</a></center>
+        </div>
+        <div style="float: left; width: 15%; margin-left: 2%">
+            <img src="/logos/auramedia.png" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="http://www.auramedia.com.tr">AuraMedia</a></center>
+        </div>
+        <div style="float: left; width: 15%; margin-left: 2%">
+            <img src="/logos/auramedia.png" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="https://thelega.com">Thelega</a></center>
         </div>
     </div>
 </body>
