--- a/templates/partners.html
+++ b/templates/partners.html
@@ -46,7 +46,7 @@
             <center><a style="color: black; text-decoration: none" href="http://www.auramedia.com.tr">AuraMedia</a></center>
         </div>
         <div style="float: left; width: 15%; margin-left: 2%">
-            <img src="/logos/auramedia.png" style="width: 100%" alt="">
+            <img src="/logos/thelega.png" style="width: 100%" alt="">
             <br>
             <center><a style="color: black; text-decoration: none" href="https://thelega.com">Thelega</a></center>
         </div>
