--- a/templates/partners.html
+++ b/templates/partners.html
@@ -50,6 +50,12 @@
             <br>
             <center><a style="color: black; text-decoration: none" href="https://thelega.com">Thelega</a></center>
         </div>
+        <br>
+        <div style="float: left; width: 15%; margin-left: 2%">
+            <img src="/logos/egbilisim.png" style="width: 100%" alt="">
+            <br>
+            <center><a style="color: black; text-decoration: none" href="http://egbilisim.com.tr">EG Bilişim</a></center>
+        </div>
     </div>
 </body>
 </html>
