--- a/templates/partners.html
+++ b/templates/partners.html
@@ -41,7 +41,7 @@
             <center><a style="color: black; text-decoration: none" href="http://pupahouse.com">PupaHouse</a></center>
         </div>
         <br>
-        <div style="float: left; width: 15%; margin-left: 2%">
+        <div style="width: 15%; margin-left: 2%">
             <img src="/logos/auramedia.png" style="width: 100%" alt="">
             <br>
             <center><a style="color: black; text-decoration: none" href="http://www.auramedia.com.tr">AuraMedia</a></center>
