--- a/templates/partners.html
+++ b/templates/partners.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>InAds - Plans</title>
+    <title>InAds - Partners</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
 <body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5">
@@ -40,8 +40,8 @@
             <br>
             <center><a style="color: black; text-decoration: none" href="http://pupahouse.com">PupaHouse</a></center>
         </div>
-        <br>
-        <div style="width: 15%; margin-left: 2%">
+        <div style="color: white">InGames, Inc.</div>
+        <div style="float: left; width: 15%; margin-left: 2%">
             <img src="/logos/auramedia.png" style="width: 100%" alt="">
             <br>
             <center><a style="color: black; text-decoration: none" href="http://www.auramedia.com.tr">AuraMedia</a></center>
