--- a/templates/partners.html
+++ b/templates/partners.html
@@ -35,7 +35,7 @@
             <br>
             <center><a style="color: black; text-decoration: none" href="https://www.doktus.net">Doktus</a></center>
         </div>
-        <div style="width: 15%; margin-left: 2%">
+        <div style="float: left; width: 15%; margin-left: 2%">
             <img src="/logos/pupahouse.jpeg" style="width: 100%" alt="">
             <br>
             <center><a style="color: black; text-decoration: none" href="http://pupahouse.com">PupaHouse</a></center>
