--- a/templates/docs.html
+++ b/templates/docs.html
@@ -40,6 +40,9 @@
         <h3>How to add a domain?</h3>
         <p>Make sure to download the inadsconfirm.txt file from domain add page of your dashboard and add it to your website as inadsconfirm.txt without any change. The file must be accessible through http://&lt;yourdomain>/inadsconfirm.txt</p>
         <p>Than add the domain to the database by filing the form. Your domain will be confirmed if the inadsconfirm.txt file can be detected in your website and you will be ready to monetize your website.</p>
+        <h3>Ad Group</h3>
+        <p>An ad group is four standard ads placed as a 2x2 rectangle to optimize earnings. You can quadruple your earnings by using an ad group without increasing the amount of ad space on your website.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroup">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
@@ -70,6 +73,9 @@
         <h3>Nasıl yeni bir alan adı eklerim?</h3>
         <p>Öncelikle alan adı ekleme sekmesinden inadsconfirm.txt dosyasını indirin, websitenize ekleyin ve dosyanın http://&lt;alan adınız>/inadsconfirm.txt adresinden erişilebilir olduğuna emin olun.</p>
         <p>Sonrasında sayfada yer alan formu doldurarak işlemi tamamlayın ve kullanmaya başlayın.</p>
+        <h3>Reklam Grubu</h3>
+        <p>Bir reklam grubu 4 tane standard reklamın 2 x 2 şeklinde yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanılarak gelirinizi 4 katına çıkartır.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroup">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
