--- a/templates/docs.html
+++ b/templates/docs.html
@@ -74,7 +74,7 @@
         <p>Öncelikle alan adı ekleme sekmesinden inadsconfirm.txt dosyasını indirin, websitenize ekleyin ve dosyanın http://&lt;alan adınız>/inadsconfirm.txt adresinden erişilebilir olduğuna emin olun.</p>
         <p>Sonrasında sayfada yer alan formu doldurarak işlemi tamamlayın ve kullanmaya başlayın.</p>
         <h3>Reklam Grubu</h3>
-        <p>Bir reklam grubu 4 tane standard reklamın 2 x 2 şeklinde yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanılarak gelirinizi 4 katına çıkartır.</p>
+        <p>Bir reklam grubu 4 tane standard reklamın 2 x 2 şeklinde yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanımını sağlar ve gelirinizi 4 katına çıkartır.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroup">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
