--- a/templates/docs.html
+++ b/templates/docs.html
@@ -43,6 +43,9 @@
         <h3>Ad Group</h3>
         <p>An ad group is four standard ads placed as a 2x2 rectangle to optimize earnings. You can quadruple your earnings by using an ad group without increasing the amount of ad space on your website.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroup">&lt;/div></p>
+        <h3>Feed Ad Group</h3>
+        <p>A feed ad group is four square ads placed side to side to optimize earnings. You can quadruple your earnings by using an ad group without increasing the amount of ad space on your website.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">InAds with Unity</a>
         <div id="InAdsUnity" hidden="true">
             <h3>How to use InAds with Unity</h3>
@@ -76,6 +79,9 @@
         <h3>Reklam Grubu</h3>
         <p>Bir reklam grubu 4 tane standard reklamın 2 x 2 şeklinde yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanımını sağlar ve gelirinizi 4 katına çıkartır.</p>
         <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroup">&lt;/div></p>
+        <h3>Feed Reklam Grubu</h3>
+        <p>Bir feed reklam grubu 4 tane kare reklamın yan yana yerleştirilmesi ile oluşur. Aynı reklam alanına 4 reklam sığdırarak alanın optimum kullanımını sağlar ve gelirinizi 4 katına çıkartır.</p>
+        <p style="background-color: rgb(230, 230, 235)">&lt;div class="inadsgroupsquare">&lt;/div></p>
         <a onclick="InAdsUnity()" style="text-decoration: none; color: yellow">Unity ile InAds</a>
         <div id="InAdsUnityTR" hidden="true">
             <h3>InAds Unity ile nasıl kullanılır?</h3>
