--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -166,6 +166,13 @@
                         <hr>
                         <br>
                         <input class="buttonBlue" style="width: 40%" type=submit value="Send Blacklist Request">
+                        <br>
+                        <br>
+                        <br>
+                        <input class="mainFormBig" style="width: 100%" type=number name=budgetinc placeholder="Increase ad budget">
+                        <hr>
+                        <br>
+                        <input class="buttonGray" style="width: 40%" type=submit value="Ok">
                     </form>
                     {% if numberofads < 5 %}
                         <small>You are using too few keywords this may result in a high rate of inconsistency
