--- a/templates/adinformation.html
+++ b/templates/adinformation.html
@@ -172,7 +172,7 @@
                         <input class="mainFormBig" style="width: 100%" type=number name=budgetinc placeholder="Increase ad budget">
                         <hr>
                         <br>
-                        <input class="buttonGray" style="width: 40%" type=submit value="Ok">
+                        <input class="buttonGray" style="width: 40%" type=submit value="Increase Budget">
                     </form>
                     {% if numberofads < 5 %}
                         <small>You are using too few keywords this may result in a high rate of inconsistency
