--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: .3">
-        <center>
+        <center style="vertical-align: middle">
             <h1 style="font-size: 5rem">Best Way To Monetize <br> Your Content.</h1>
             <br>
             <h2>5 Times higher earnings and 2 times less costs compared to other services.</h2>
