--- a/templates/index.html
+++ b/templates/index.html
@@ -20,13 +20,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: .3">
-        <center style="vertical-align: middle">
-            <h1 style="font-size: 5rem">Best Way To Monetize <br> Your Content.</h1>
-            <br>
-            <h2>5 Times higher earnings and 2 times less costs compared to other services.</h2>
-            <br>
-            <button class="buttonBlue" onclick="document.location = '/register'">Start Now</button>
-        </center>
+        <img src="/logos/title.png" alt="">
     </div>
 
     <center>
