--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: .3">
-        <img src="/logos/title.png" alt="">
+        <img src="/logos/title.png" alt="" height="90%">
         <br>
     </div>
 
