--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: .3">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh">
+        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh; width: 100%">
         <br>
     </div>
 
