--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <title>InAds</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,300" rel="stylesheet" type="text/css">
 </head>
-<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5">
+<body style="width: 100%; height: 100%; font-family: Open Sans; font-size: 12; line-height: 1.5;  padding: 0; margin: 0; outline: 0; border: 0"">
     <link rel="stylesheet" type="text/css" href="/styles">
 
     <div>
@@ -20,7 +20,7 @@
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
         <hr style="opacity: .3">
-        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh; width: 100%; padding: 0; margin: 0; outline: 0; border: 0">
+        <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh; width: 100%">
         <br>
     </div>
 
