--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,7 @@
     </center>
     <br>
     <center style="background-color: rgb(180, 180, 185);">
-        <h1 style="color: white">InAds by InGames, Inc.</h1>
+        <strong style="color: white; font-size: 2rem">InAds by InGames, Inc.</strong>
     </center>
 
     <script>
