--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <a class="navbarElement" style="float:right; margin-right: 5%;" href="/register">Register</a>
             <a class="navbarElement" style="float:right; margin-right: 2%;" href="/login">Login</a>
         </div>
-        <hr style="opacity: .3">
+        <hr style="opacity: 0">
         <img id="titleimage" src="/logos/title.png" alt=""  style="height: 100vh; width: 100%">
         <br>
     </div>
