--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -49,6 +49,7 @@
                 <option value="inadsbanner">Banner- Typically for vertically placed ads</option>
                 <option value="inadstandard">Rectangle - Typically for horizontally placed ads</option>
                 <option value="inadsquare">Square - Typically for ads with evenly distributed width and height</option>
+                <option value="inadsvideo">Video</option>
             </select>
             <hr>
             <br>
