--- a/templates/docs.html
+++ b/templates/docs.html
@@ -33,7 +33,7 @@
             <li>inadstandard: width:height = 5:1</li>
             <li>inadsquare: width:height = 1:1</li>
             <li>inadsbanner: width:height = 1:5</li>
-            <li>inadsvideo: for videos instead of &lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div> use &lt;div>&lt;video class=inads name=&lt;shape> autoplay loop muted playsinline controls>&lt;/div></li>
+            <li>inadsvideo: for videos instead of <span style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></span> use <span style="background-color: rgb(230, 230, 235)">&lt;div>&lt;video class=inads name=&lt;shape> autoplay loop muted playsinline controls>&lt;/div></span></li>
         </ul>
         By choosing one of the ad types listed above you can pick the shape of the ad you want to display and by setting the margins of the elements your can place them wherever you want. You can place as many ads as you want. If you are giving additional styling to ads always give the styling to the parent div.
         <br>
@@ -70,6 +70,7 @@
             <li>inadstandard: width:height = 5:1</li>
             <li>inadsquare: width:height = 1:1</li>
             <li>inadsbanner: width:height = 1:5</li>
+            <li>inadsvideo: Videolarda bu kodun yerine <span style="background-color: rgb(230, 230, 235)">&lt;div>&lt;img class=inads name=&lt;shape>>&lt;/div></span> bu kodu kullanın <span style="background-color: rgb(230, 230, 235)">&lt;div>&lt;video class=inads name=&lt;shape> autoplay loop muted playsinline controls>&lt;/div></span></li>
         </ul>
         Yukarıdaki listelenmiş reklam tiplerinden birini seçerek reklamlarınızın şeklini seçebilirsiniz. Eğer bu reklamlara ekstra stil vermek isterseniz bunu div üst öğesi üzerinden yapmanızı öneririz.
         <br>
