--- a/templates/uploads.html
+++ b/templates/uploads.html
@@ -49,7 +49,7 @@
                 <option value="inadsbanner">Banner- Typically for vertically placed ads</option>
                 <option value="inadstandard">Rectangle - Typically for horizontally placed ads</option>
                 <option value="inadsquare">Square - Typically for ads with evenly distributed width and height</option>
-                <option value="inadsvideo">Video 360 x 210 prefer 360p for video quality</option>
+                <option value="inadsvideo">Video 360 x 210 prefer 360p video quality for faster loading speed.</option>
             </select>
             <hr>
             <br>
