--- a/templates/inadspitch.html
+++ b/templates/inadspitch.html
@@ -54,10 +54,42 @@
 
     <h3>What problems we solve?</h3>
     <ul>
-        <li>You do not need money to make money anymore, marketing will not be a cash burn anymore, you can get a loan to cover up every cost.</li>
-        <li>Super cheap, up to 40 times cheaper than other networks average.</li>
-        <li>AdBlocker proof, ad block is often regarded as the biggest thread to the online monetisation and digital advertising, about 25.8 percent of the internet users use AdBlock, meaning that even though we have way lower CPC compared to any other network publishers’ revenue increases at the same time.</li>
+        <li>Marketing is not affordable for most of the businesses.</li>
+        <li>You need a large cash reserve to market even small businesses (A typical small business spends an average of 9,000 USD per month on Google Ads)</li>
+        <li>AdBlocker is a huge thread to online advertising with about 25% of the internet using it.</li>
+    </ul>
 
+    <h3>Market Size</h3>
+    <ul>
+        <li>A total of 325 Billion USD is spend on online advertising last year.</li>
+        <li>More than 20 million websites are monetising their content through digital advertising.</li>
+    </ul>
+
+    <h3>Product</h3>
+    Upload your ad - Choose ad format (Video, Banner or Square) - Choose Target Audience Through Keywords - Publish!
+
+    <h3>Business Model</h3>
+    We are taking interest from advertising loans.
+
+    <h3>Market Adoption</h3>
+    <ul>
+        <li><a href="/partners">Partners</a></li>
+        <li>1 billion traffic.</li>
+    </ul>
+
+    <h3>Competition</h3>
+
+    <ul>
+        <li>Taboola - Unpopular Ad Formats and Higher Pricing</li>
+        <li>Google Ads - Higher Pricing</li>
+        <li>PropellerAds - Low Traffic, Unpopular Ad Formats</li>
+    </ul>
+
+    <h3>Advantages</h3>
+    <ul>
+        <li>Ease of use, simple ui with simple targeting.</li>
+        <li>Super Cheap, up to forty times cheaper CPC.</li>
+        <li>Installment payments & Loans, allows small businesses and startups to scale without spending a single cent.</li>
     </ul>
 
     <h3>Vision</h3>
